--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>let's play</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/out.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,6 @@
     </section>
 </div>
 
-<script src="js/out.js"></script>
 </body>
 
 </html>
